[package]
name = "charmtoken"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "charmtoken"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.2"
anchor-spl = "0.16.2"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}
spl-token-metadata = {path = "./../../token-metadata/program", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
switchboard-program = "0.1.45"
